--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@edgio/vue": "^7.0.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "register-service-worker": "^1.7.2",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@edgio/cli": "^6.1.3",
+    "@edgio/core": "^6.1.3",
+    "@edgio/devtools": "^6.1.3",
+    "@edgio/prefetch": "^6.1.3",
+    "@edgio/vue-cva": "^6.1.3",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
